job model Completed

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -41,7 +41,7 @@
       			    href="#">Jobs <span class="caret"></span></a>
         			<ul class="dropdown-menu">
           				<li><a href="#!/addjob" ng-show="loggedInUser.role=='ADMIN'">Add New Jobs</a></li>
-          				<li><a href="#">View Jobs</a></li>
+          				<li><a href="#!/alljobs">View Jobs</a></li>
           				
         			</ul>
         		</li>
